# file_todo

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  settings.py
.github/workflows/: linters.yaml  tests.yaml
alembic/: env.py
alembic/versions/: bbf0a0070daf_init_migration.py
app/: database.py  routers.py  schemas.py  services.py
databases/: dals.py  models.py  postgres_session.py  redis_client.py  s3_client.py
tests/: conftest.py  test_delete_file.py  test_get_file_url.py  test_github_actions.py  test_update_file.py  test_upload_file.py
