[tool.poetry]
name = "file-todo"
version = "0.1.0"
description = ""
authors = ["Valerolactone <varanchukv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
aioboto3 = "^13.1.1"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
redis = "^5.1.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
pylint = "^3.2.5"
isort = "^5.13.2"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
pythonpath = [
    '.'
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
